<resources>
    <string name="app_name">PelmorexAssessment</string>
    <string name="title_weather">Weather</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_gallery_full_screen">Gallery Full Screen</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="general_send">Send</string>
    <string name="contact_us_name_title">Name</string>
    <string name="contact_us_email_title">Email</string>
    <string name="contact_us_phone_title">Phone Number</string>
    <string name="general_confirm">Confirm</string>
    <string name="contact_us_submit_success">Submitted Success</string>
    <string name="weather_temperature">Temperature: %1$s\u00B0%2$s</string>
    <string name="weather_feel_like">Feel Like: %1$s\u00B0%2$s</string>
    <string name="weather_condition">Condition: %s</string>
    <string name="weather_temperature_scale">Temperature Scale</string>
    <string name="weather_celcius">\u00B0C</string>
    <string name="weather_fahrenheit">\u00B0F</string>

</resources>