<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_weather">

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.pelmorexassessment.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.pelmorexassessment.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/gallery_to_full_screen"
            app:destination="@+id/navGalleryFullScreen"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_contactus"
        android:name="com.example.pelmorexassessment.ui.contactus.ContactUsFragment"
        android:label="@string/title_contact_us"
        tools:layout="@layout/fragment_contactus"/>


    <fragment
        android:id="@+id/navGalleryFullScreen"
        android:name="com.example.pelmorexassessment.ui.gallery.GalleryFullScreenFragment"
        android:label="@string/title_gallery_full_screen"
        tools:layout="@layout/fragment_gallery_full_screen" />
</navigation>